  paths.
  (Nicolás Ojeda Bär, report by Jason Gross, review by Gabriel Scherer)

- #11727: Ensure push_defaults can push past module patterns, fixing an
  currying optimisation accidentally disabled by #10340.
  (Stephen Dolan, review by Gabriel Scherer)

- #11732: Ensure that types from packed modules are always generalised
  (Stephen Dolan and Leo White, review by Jacques Garrigue)

- #11776: Extend environment with functor parameters in `strengthen_lazy`.
  (Chris Casinghino and Luke Maurer, review by Gabriel Scherer)

- #11803, #11808: on x86, the destination of an integer comparison must be
  a register, it cannot be a stack slot.
  (Vincent Laviron, review by Xavier Leroy, report by
   Emilio Jesús Gallego Arias)

- #11809: Protect Parmatch.pats_of_type from missing cmis
  (Jacques Garrigue, review by Stephen Dolan and Gabriel Scherer)

- #11824: Fix a crash when calling `ocamlrun -b`
  (Florian Angeletti, review by Sébastien Hinderer)

- #11815: Marshalling continuations raises invalid argument exception.
  (Jérôme Vouillon, review by Nicolás Ojeda Bär, Stephen Dolan and
   Hugo Heuzard)

- #11850: When stopping before the `emit` phase (using `-stop-after`), an empty
  temporary assembly file is no longer left in the file system.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)

- #12264, #12289: Fix compact_allocate to avoid a pathological case
  that causes very slow compaction.
  (Damien Doligez, report by Arseniy Alekseyev, review by Sadiq Jaffer)

OCaml 5.0
---------

- #10831: Multicore OCaml
  (Enguerrand Decorne, Stephen Dolan, Tom Kelly, Sadiq Jaffer,
  Anil Madhavapeddy, Sudha Parimala, KC Sivaramakrishnan,
  Leo White, the Tarides multicore team,
  review by Florian Angeletti, Damien Doligez, Xavier Leroy,
  Guillaume Munch-Maccagnoni, Olivier Nicole, Nicolás Ojeda Bär,
  Gabriel Scherer, the OCaml core development team, and many
  other valued reviewers.)

### Language features:

### Runtime system:
